--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>Fast-Excel</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.4</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -93,9 +93,20 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.appiancorp</groupId>
+            <artifactId>appiancorp-suiteapi-annotations</artifactId>
+            <version>23.4.1320.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.dhatim</groupId>
             <artifactId>fastexcel</artifactId>
-            <version>0.18.0</version>
+            <version>0.18.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.dhatim</groupId>
+            <artifactId>fastexcel-reader</artifactId>
+            <version>0.18.4</version>
         </dependency>
         <dependency>
             <groupId>com.github.rzymek</groupId>
@@ -146,7 +157,33 @@
             <artifactId>SparseBitSet</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.2-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>appiancorp</groupId>
+            <artifactId>typetransformer</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml</groupId>
+            <artifactId>aalto-xml</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.woodstox</groupId>
+            <artifactId>stax2-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
+
     <repositories>
         <repository>
             <id>default</id>
